--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -23,12 +23,28 @@
         </thead>
         <tbody>
         <tr>
+            <td th:text="${itemkill.id}"></td>
             <td th:text="${itemkill.itemName}"></td>
             <td th:text="${itemkill.total}"></td>
             <td th:text="${#dates.format(itemkill.startTime,'yyyy-MM-dd HH:mm:ss')}"  th:pattern="${'yyyy-MM-dd HH:mm:ss'}"></td>
             <td th:text="${#dates.format(itemkill.endTime,'yyyy-MM-dd HH:mm:ss')}" th:pattern="${'yyyy-MM-dd HH:mm:ss'}"></td>
+<!--            <td id="seckillTip">-->
+<!--                <input type="hidden" id="remainSeconds" th:value="${remainSeconds}">-->
+<!--                <span th:if="${seckillStatus eq 0}">秒杀倒计时:<span id="countDown" th:text="${remainSeconds}"></span><span>秒</span></span>-->
+<!--                <span th:if="${seckillStatus eq 1}">秒杀进行中</span>-->
+<!--                <span th:if="${seckillStatus eq 2}">秒杀已结束</span>-->
+<!--            </td>-->
+<!--            <td th:if="${itemkill.canKill} eq 1">-->
+<!--                <button th:onclick="|executekill(${itemkill.id})|">抢购</button>-->
+<!--            </td>-->
             <td th:if="${itemkill.canKill} eq 1">
-                <button th:onclick="|executekill(${itemkill.id})|">抢购</button>
+                <div>
+                    <img id="captchaImg" width="130" height="32" th:onclick="|refreshCaptcha(${itemkill.id})|">
+                    <input id="captcha" >
+                    <button th:onclick="|getSeckillPath(${itemkill.id})|">抢购</button>
+                </div>
+
+
             </td>
             <td th:if="${itemkill.canKill} eq 0">
                 未在时间段内或容量为0
@@ -37,30 +53,114 @@
         </tbody>
     </table>
 </div>
+<script src=""></script>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script type="text/javascript">
-    function executekill(killid) {
+    // $(function(){
+    //    countDown();
+    // });
+    //
+    // function countDown(){
+    //     var remainSeconds = $("#remainSeconds").val();
+    //     var timeout;
+    //     if (remainSeconds>0){
+    //         timeout = setTimeout(function (){
+    //             $("#countDown").text(remainSeconds - 1);
+    //             $("#remainSeconds").val(remainSeconds - 1);
+    //             countDown();
+    //         },1000);
+    //     }else if (remainSeconds==0){
+    //         if (timeout){
+    //             clearTimeout(timeout);
+    //         }
+    //         $("#seckillTip").html("秒杀进行中");
+    //     }else {
+    //         $("#seckillTip").html("秒杀已结束");
+    //     }
+    // };
+
+    function refreshCaptcha(itemId){
+        $("#captchaImg").attr("src","/captcha?itemId=" + itemId +"&time=" + new Date());
+    }
+
+
+    function getSeckillPath(goodsId){
+        var captcha = $("#captcha").val();
+        $.ajax({
+            url: "/path",
+            type: "GET",
+            data: {
+                goodsId: goodsId,
+                captcha: captcha
+            },
+            success: function (res){
+                if (res.msg == "成功"){
+                    var path = res.data;
+                    executekill(goodsId,path);
+                }else {
+                    alert(res.code+res.msg);
+                }
+            },
+            error: function (){
+                alert("Path客户端请求错误");
+            }
+        })
+    }
+
+    function executekill(itemId,path) {
         $.ajax({
             type:"POST",
-            url:"http://localhost:8080/kill/execute",
+            url:"http://localhost:8080/kill/"+path+"/execute3",
             contentType:"application/json;charset=utf-8",
-            data:JSON.stringify({"killid":killid}),
+            data:JSON.stringify({
+                killid: itemId,
+                path: path,
+            }),
             dataType:"json",
-
             success:function (res) {
-                if (res.code==0){
-                    window.location.href="http://localhost:8080/kill/execute/success"
+                if (res.code==1){
+                    alert(res.msg)
+                    getResult(itemId);
                 }else {
                     window.location.href="http://localhost:8080/kill/execute/fail"
                 }
             },
-            error:function (msg) {
+            error:function () {
+                alert(path);
               alert("数据提交失败");
             }
         })
     }
+
+    function getResult(killid){
+        $.ajax({
+            url: "/result",
+            type: "GET",
+            data: {
+                killId: killid
+            },
+            success:function (res) {
+                //alert(res.code+"result")
+                if (res.code == -1){
+                    alert("秒杀失败");
+                }else if (res.code == 1){
+                    setTimeout(function (){
+                        getResult(killid);
+                    },50);
+                }else {
+                    window.location.href="http://localhost:8080/kill/execute/success"
+                }
+            },
+            error:function (){
+                alert("Result客户端请求错误");
+            }
+
+        })
+
+    }
+
 </script>
 </body>
 </html>
